# Content_researcher

./: .dockerignore  .env.example  .gitignore  BUILD_PROMPT.md  Dockerfile  MANUAL_TESTING_CHECKLIST.md  PROJECT_SCOPE.md  README.md  USAGE_NOTES.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: ai_provider.py  ai_reasoning.py  auth.py  channel_analyzer.py  classifier.py  competitor_finder.py  config.py  db.py  main.py  models.py  topic_search.py
app/routers/: auth.py  billing.py
app/services/: reddit_client.py
static/: index.html  landing.html  robots.txt  sitemap.xml
tests/: conftest.py  test_ai_reasoning.py  test_api.py  test_auth.py  test_classifier.py  test_competitor_finder.py  test_db.py  test_main.py  test_models.py  test_topic_search.py  validate_phase_10.py
